# jyu-agora-infoscreen

./: FetchHall.hs  Korppi.hs  Utils.hs  VMonad.hs  Vaksitin.cabal
site/: _partial_ongoing.html  _partial_upcoming.html  index.html  ongoing.html  upcoming.html  yousource_feed.atom
site/css/: agora.css  agora.css~  yousource.css  yousource.css~
